Replace LevelPair with SingleLevel